--- a/Index.html
+++ b/Index.html
@@ -21,50 +21,50 @@
   <div class="row">
     <div class="col-4 text-center">
       <label id="product1">Casual summer dress</label>
-      <img src="dress1." style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product1" id="price1">10000.00</label>
+      <img src="dress1.pdf" style="width:400px; height:500px;" class="img-thumbnail"/>
+      <label for="product1" id="price1">1000.00</label>
       <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/>
     </div>
   
     <div class="col-4 text-center">
-      <label id="product2">Infinix Smart8</label>
-      <img src="infinix8.jpeg" style="width:400px; height:500px;" class="img-thumbnail"/>
+      <label id="product2">boho summer dress</label>
+      <img src="dress2.pdf" style="width:400px; height:500px;" class="img-thumbnail"/>
       <label for="product2" id="price2">5000.00</label>
       <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/>
     </div>
   
     <div class="col-4 text-center">
-      <label id="product3">Samsung S21</label>
-      <img src="samsung21.jpeg" style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product3" id="price3">27000.00</label>
+      <label id="product3">casual summer dress</label>
+      <img src="dress3.pdf" style="width:400px; height:500px;" class="img-thumbnail"/>
+      <label for="product3" id="price3">2000.00</label>
       <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/>
     </div>
 
     <div class="col-4 text-center">
-      <label id="product4">Samsung S22</label>
-      <img src="samsung22.jpeg" style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product4" id="price4">37000.00</label>
+      <label id="product4">casual Summer dress</label>
+      <img src="dress4.pdf" style="width:400px; height:500px;" class="img-thumbnail"/>
+      <label for="product4" id="price4">5000.00</label>
       <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/>
     </div>
 
     <div class="col-4 text-center">
-      <label id="product5">iPhone 12</label>
-      <img src="iphone12.jpeg" style="width:400px; height:500px;" class="img-thumbnail"/>
+      <label id="product5">boho summer dress</label>
+      <img src="dress5.pdf" style="width:400px; height:500px;" class="img-thumbnail"/>
       <label for="product5" id="price5">80000.00</label>
       <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/>
     </div>
 
     <div class="col-4 text-center">
-      <label id="product6">iPhone 13</label>
-      <img src="iphone13.jpeg" style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product6" id="price6">90000.00</label>
+      <label id="product6">boho summer dress</label>
+      <img src="dress6.pdf" style="width:400px; height:500px;" class="img-thumbnail"/>
+      <label for="product6" id="price6">1000.00</label>
       <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/>
     </div>
 
     <div class="col-4 text-center">
-      <label id="product7">iPhone 14</label>
-      <img src="iphone14.jpeg" style="width:400px; height:500px;" class="img-thumbnail"/>
-      <label for="product7" id="price7">100000.00</label>
+      <label id="product7">casual summer dress</label>
+      <img src="dress7.pdf" style="width:400px; height:500px;" class="img-thumbnail"/>
+      <label for="product7" id="price7">2000.00</label>
       <input type="number" class="form-control" id="qty7" placeholder="Enter quantity"/>
     </div>
 
