--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12 text-center">
-      <h2>Shy Taemanok </h2>
+      <h2> SUMMER DRESS </h2>
       
       <hr class="hr" />
     </div>
